# 2048_SDL2

./: .gitignore  CMakeLists.txt  Mat.h  Project1.vcxproj  Project1.vcxproj.filters  README.md  game.cpp  game.h  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_TTF.cmake
